# jpyecomm_backend

./: .gitignore  .infisical.json  .pylintrc  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  sql_app.db  tree.txt
src/: main.py  settings.py  sqlite.db  test.db
src/alembic/: env.py
src/alembic/versions/: 034c93941c93_.py
src/api/: __init__.py  products.py  users.py
src/app/: __init__.py  generic.py  products.py  users.py
src/app/checkout/: __init__.py
src/base/: __init__.py  test.py
src/common/: __init__.py  auth.py  aws.py  aws_client.py  base_users.py  generic.py  secrets.py
src/init/: __init__.py
src/migrations/: env.py
src/routes/: __init__.py
src/simple/: main.py  users.py
src/simple/structure/: schemas.py
src/structure/: __init__.py  connectors.py  enums.py  models.py  readme.md  schemas.py
src/structure/checkout/: __init__.py
src/utils/: __init__.py  enums.py  exceptions.py  typos.py
